base/argoWorkflow/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflow-ingress
  namespace: argo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: workflow.     # Changed host name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-server       # Changed service name
                port:
                  number: 2746          # Changed port to Argo Workflows default
  # tls:
  # - hosts:
  #   - workflow.           # Changed host name
